UF-16177: Add resource to find conversations based on spring-filter
