# src/main/java/se/sundsvall/messageexchange/api/ConversationResource.java
@@ -9,6 +9,7 @@ import static org.springframework.web.util.UriComponentsBuilder.fromPath;
 import static se.sundsvall.messageexchange.Constants.NAMESPACE_REGEXP;
 import static se.sundsvall.messageexchange.Constants.NAMESPACE_VALIDATION_MESSAGE;
 
+import com.turkraft.springfilter.boot.Filter;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -16,6 +17,10 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.constraints.Pattern;
+import org.springdoc.core.annotations.ParameterObject;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -31,6 +36,7 @@ import org.zalando.problem.violations.ConstraintViolationProblem;
 import se.sundsvall.dept44.common.validators.annotation.ValidMunicipalityId;
 import se.sundsvall.dept44.common.validators.annotation.ValidUuid;
 import se.sundsvall.messageexchange.api.model.Conversation;
+import se.sundsvall.messageexchange.integration.db.model.ConversationEntity;
 import se.sundsvall.messageexchange.service.ConversationService;
 
 @RestController
@@ -47,6 +53,20 @@ class ConversationResource {
 
 	ConversationResource(final ConversationService service) {
 		this.service = service;
+	}
+
+	@GetMapping(produces = APPLICATION_JSON_VALUE)
+	@Operation(description = "Get all conversations", responses = {
+		@ApiResponse(responseCode = "200", description = "OK - Successful operation", useReturnTypeSchema = true)
+	})
+	ResponseEntity<Page<Conversation>> getConversations(
+		@Parameter(name = "municipalityId", description = "Municipality ID", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
+		@Parameter(name = "namespace", description = "Namespace", example = "MY_NAMESPACE") @Pattern(regexp = NAMESPACE_REGEXP, message = NAMESPACE_VALIDATION_MESSAGE) @PathVariable final String namespace,
+		@Parameter(description = "Syntax description: [spring-filter](https://github.com/turkraft/spring-filter/blob/85730f950a5f8623159cc0eb4d737555f9382bb7/README.md#syntax)",
+			example = "topic:'My topic' and messages.createdBy.value:'joe01doe' and messages.created>'2023-01-01T00:00:00Z'",
+			schema = @Schema(implementation = String.class)) @Filter final Specification<ConversationEntity> filter,
+		@ParameterObject final Pageable pageable) {
+		return ResponseEntity.ok(service.readConversations(namespace, municipalityId, filter, pageable));
 	}
 
 	@GetMapping(path = "/{conversationId}", produces = APPLICATION_JSON_VALUE)
